Update plugin versions.